--- a/app/src/main/res/layout/mycart_row.xml
+++ b/app/src/main/res/layout/mycart_row.xml
@@ -19,14 +19,19 @@
             <ImageView
                 android:id="@+id/bookImgCart"
                 android:layout_width="match_parent"
-                android:layout_height="120dp" />
+                android:layout_height="120dp"
+                android:contentDescription="TODO" />
+
             <ImageView
                 android:id="@+id/deleteInCart"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_marginEnd="6dp"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
                 android:src="@drawable/delete"
                 android:layout_gravity="right"
-                android:layout_marginTop="-120dp"/>
+                android:background="@drawable/circelimg"
+                android:layout_marginTop="-114dp"
+                android:contentDescription="TODO" />
 
         </LinearLayout>
 
@@ -35,16 +40,42 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="#acdbdf"
-            android:paddingTop="10dp"
             android:paddingBottom="10dp">
-
             <TextView
                 android:id="@+id/booknameCart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="bookname"
+                android:text=""
+                android:textSize="15dp"
                 android:textAlignment="center"
+                android:layout_marginBottom="5dp"
                 android:autoSizeMaxTextSize="15dp"
+                android:textStyle="bold"
+                android:textColor="#000" />
+            <TextView
+                android:id="@+id/sellingPriceCartrow"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="#000"
+                android:textSize="15sp"/>
+            <TextView
+                android:id="@+id/rentingPriceCartrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textSize="15sp"
+                android:layout_marginEnd="3dp"
+                android:textColor="#000" />
+            <TextView
+                android:id="@+id/locationCartrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:layout_marginTop="7dp"
+                android:textSize="15dp"
+                android:drawableLeft="@drawable/ic_baseline_location_on_24"
+                android:layout_marginRight="3dp"
                 android:textColor="#000" />
         </LinearLayout>
     </LinearLayout>
