--- a/app/src/main/res/layout/mysold_row.xml
+++ b/app/src/main/res/layout/mysold_row.xml
@@ -23,11 +23,13 @@
                 android:layout_height="120dp" />
             <ImageView
                 android:id="@+id/deleteInSold"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_marginRight="6dp"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
                 android:src="@drawable/delete"
                 android:layout_gravity="right"
-                android:layout_marginTop="-120dp"/>
+                android:background="@drawable/circelimg"
+                android:layout_marginTop="-114dp"/>
         </LinearLayout>
 
         <LinearLayout
