--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:popupTheme="@style/Theme.Semester_6.PopupOverlay"
+            android:background="#3aa8c1"
             app:titleTextColor="#fff">
         </androidx.appcompat.widget.Toolbar>
 
