--- a/app/src/main/res/layout/fragment_coreteam.xml
+++ b/app/src/main/res/layout/fragment_coreteam.xml
@@ -1,10 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="660dp"
-    android:background="#FFFFFF"
+    android:layout_height="wrap_content"
+    android:background="#3aa8c1"
+    android:orientation="vertical"
     tools:context=".ui.CoreTeam.CoreTeamFragment">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="match_parent"
+                android:layout_height="290dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="2dp"
+                android:src="@drawable/indiamap1" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Meet The Core Team"
+                android:textSize="25dp"
+                android:textAlignment="center"
+                android:textColor="#fff"
+                android:layout_marginTop="-15dp"
+                android:padding="5dp"
+                android:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginTop="50dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:background="@drawable/gradiant">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Mr. Aksh Maradiya"
+                    android:textColor="#fff"
+                    android:layout_marginLeft="60dp"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:textSize="15dp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginLeft="60dp"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:id="@+id/linkdinaksh"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginRight="5dp"
+                        android:src="@drawable/linkdin"/>
+                    <ImageView
+                        android:id="@+id/instaaksh"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/insa"/>
+                </LinearLayout>
+            </LinearLayout>
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:src="@drawable/akak"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="-120dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginRight="20dp"
+                android:justificationMode="inter_word"
+                android:text="@string/ak"
+                android:textColor="#fff"
+                android:textSize="15dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginTop="50dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:background="@drawable/gradiant">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Mr. Vasu Hudka"
+                    android:textColor="#fff"
+                    android:gravity="center"
+                    android:layout_marginLeft="60dp"
+                    android:textStyle="bold"
+                    android:textSize="15dp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_marginLeft="60dp"
+                    android:layout_marginTop="3dp"
+                    android:orientation="horizontal">
+                    <ImageView
+                        android:id="@+id/linkdinvasu"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginRight="5dp"
+                        android:src="@drawable/linkdin"/>
+                    <ImageView
+                        android:id="@+id/instavasu"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/insa"/>
+                </LinearLayout>
+            </LinearLayout>
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:src="@drawable/vasu"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="-120dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginRight="20dp"
+                android:justificationMode="inter_word"
+                android:text="@string/vs"
+                android:textColor="#fff"
+                android:textSize="15dp" />
+
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
