--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,26 +38,46 @@
         </androidx.recyclerview.widget.RecyclerView>
     </ScrollView>
 
-    <Button
-        android:id="@+id/sellButton"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginBottom="12dp"
-        android:background="@drawable/sellbutton"
-        android:text="@string/sellButton"
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:background="#3aa8c1"
+    android:gravity="center"
+    android:layout_alignParentBottom="true"
+    android:textColor="#fff"
+    android:textStyle="bold"
+    android:textSize="10sp"/>
 
-        android:layout_alignBottom="@+id/linearLayout2"
-        android:layout_centerHorizontal="true"
-        android:textColor="#fff"
-        android:textSize="15sp"/>
     <LinearLayout
-        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#3aa8c1"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical" />
+        android:background="@android:color/transparent"
+        android:layout_marginBottom="0dp"
+        android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="68dp"
+            android:layout_height="69.5dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/sellbutton"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/sellButton"
+                android:layout_width="68dp"
+                android:layout_height="70dp"
+                android:layout_gravity="center"
+                android:background="@drawable/roundbutton"
+                android:gravity="center"
+                android:paddingTop="2dp"
+                android:text="SELL"
+                android:textColor="#000"
+                android:textSize="11sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </LinearLayout>
 
 </RelativeLayout>
