--- a/app/src/main/res/layout/home_singlerow.xml
+++ b/app/src/main/res/layout/home_singlerow.xml
@@ -11,7 +11,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="#6b778d">
         <LinearLayout
@@ -30,8 +30,8 @@
                 android:layout_height="30dp"
                 android:src="@drawable/cart"
                 android:layout_gravity="right"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="-117dp"/>
+                android:layout_marginRight="7dp"
+                android:layout_marginTop="-114dp"/>
 
             <ImageView
                 android:id="@+id/successFullAdd"
@@ -46,7 +46,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:background="#acdbdf"
             android:paddingTop="2dp"
