--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -5,21 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#FFFFFF"
+    android:background="#e6f5ff"
+    android:id="@+id/mainlinear"
     tools:context=".ui.home.itemDetails">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/mainlinear1"
+            android:padding="5dp"
             android:orientation="vertical">
 
     <ImageView
         android:id="@+id/bookImgfullDetails"
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
         android:layout_height="300dp"
         android:layout_gravity="center"/>
 
@@ -38,25 +44,26 @@
         android:orientation="vertical"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
+        android:padding="7dp"
         android:layout_marginRight="10dp"
-        android:background="#53354a">
+        android:background="@drawable/itemfulldetailbackground">
 
         <TextView
             android:id="@+id/bookAuthorFullDetails"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#fff" />
+            android:textColor="#000" />
 
         <TextView
             android:id="@+id/bookTypeFullDetails"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#fff" />
+            android:textColor="#000" />
         <TextView
             android:id="@+id/bookSellingFullDetails"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#fff" />
+            android:textColor="#000" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -66,26 +73,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="4dp"
-            android:textColor="#fff" />
+            android:textColor="#000" />
         <TextView
             android:id="@+id/renttimeFullDetails"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textColor="#fff"/>
+            android:textColor="#000"/>
         </LinearLayout>
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
         <TextView
             android:id="@+id/bookAdressFullDetails"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#fff" />
+            android:layout_marginRight="4dp"
+            android:drawableLeft="@drawable/ic_baseline_location_on_24"/>
 
         <TextView
             android:id="@+id/bookZipcodeFullDetails"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#fff" />
-
+            android:textColor="#000" />
+</LinearLayout>
     </LinearLayout>
 
 
@@ -96,12 +107,13 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="#53354a">
+        android:padding="7dp"
+        android:background="@drawable/itemfulldetailbackground">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:text="Book Seller"
             android:textAlignment="center"
             android:textSize="20dp"
@@ -111,20 +123,22 @@
             android:id="@+id/userName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#fff"
+            android:textColor="#000"
             />
 
         <TextView
             android:id="@+id/userEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#fff" />
+            android:textColor="#000"
+            />
 
         <TextView
             android:id="@+id/userPhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#fff" />
+            android:textColor="#000"
+            />
     </LinearLayout>
 
     <LinearLayout
@@ -134,13 +148,14 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp">
+
         <Button
             android:id="@+id/callButton"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:text="call"
-            android:layout_marginRight="5dp"/>
+            android:text="call" />
 
         <Button
             android:id="@+id/chatWp"
