--- a/app/src/main/res/layout/activity_itemdetails_mysold.xml
+++ b/app/src/main/res/layout/activity_itemdetails_mysold.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#e6f5ff"
     tools:context=".itemdetails_mysold">
 
     <ImageView
@@ -29,27 +30,28 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="#53354a">
+        android:padding="7dp"
+        android:background="@drawable/itemfulldetailbackground">
 
         <TextView
             android:id="@+id/bookAuthorFullDetailsSold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#fff"
+            android:textColor="#000"
             />
 
         <TextView
             android:id="@+id/bookTypeFullDetailsSold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#fff"
+            android:textColor="#000"
             />
 
         <TextView
             android:id="@+id/bookSellingFullDetailsSold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#fff"
+            android:textColor="#000"
             />
 
         <LinearLayout
@@ -61,28 +63,34 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="4dp"
-                android:textColor="#fff" />
+                android:textColor="#000"
+                />
             <TextView
                 android:id="@+id/renttimeFullDetailsSold"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:textColor="#fff"/>
+                android:textColor="#000"
+                />
         </LinearLayout>
 
 
-        <TextView
-            android:id="@+id/bookAdressFullDetailsSold"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#fff"
-           />
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/bookAdressFullDetailsSold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="4dp"
+                android:drawableLeft="@drawable/ic_baseline_location_on_24"/>
 
-        <TextView
-            android:id="@+id/bookZipcodeFullDetailsSold"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#fff"
-/>
+            <TextView
+                android:id="@+id/bookZipcodeFullDetailsSold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#000" />
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -94,12 +102,13 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="#53354a">
+        android:padding="7dp"
+        android:background="@drawable/itemfulldetailbackground">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#fff"
+            android:textColor="#000"
             android:text="Book Seller"
             android:textAlignment="center"
             android:textSize="20dp"
@@ -109,19 +118,21 @@
             android:id="@+id/userNameSold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#fff"
+            android:textColor="#000"
             />
 
         <TextView
             android:id="@+id/userEmailSold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#fff" />
+            android:textColor="#000"
+            />
 
         <TextView
             android:id="@+id/userPhoneSold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#fff" />
+            android:textColor="#000"
+            />
     </LinearLayout>
 </LinearLayout>
