--- a/app/src/main/res/layout/fragment_mysoldbook.xml
+++ b/app/src/main/res/layout/fragment_mysoldbook.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="#e6f5ff"
     tools:context=".mysoldbook">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:background="#FFFFFF"
+        android:background="#e6f5ff"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recViewHistory"/>
