--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:label="CoreTeam"
+        android:label="Book4All"
         android:name="com.example.semester_6.ui.CoreTeam.CoreTeamFragment"
         tools:layout="@layout/fragment_coreteam" />
     <fragment
@@ -27,4 +27,9 @@
         android:label="MySoldBooks"
         android:name="com.example.semester_6.mysoldbook"
         tools:layout="@layout/fragment_mysoldbook" />
+    <fragment
+        android:id="@+id/aboutapp"
+        android:label="About App"
+        android:name="com.example.semester_6.aboutapp"
+        tools:layout="@layout/fragment_aboutapp" />
 </navigation>
